Add Apache Spark 4 support
Spark 4 refactored the SparkSession API (an abstract `org.apache.spark.sql.SparkSession`
in sql-api vs the concrete `org.apache.spark.sql.classic.SparkSession`), moved the
executor-side class loader into spark-core and dropped its HTTP class-fetch path, and
is Scala-2.13-only on Java 17/21. This adds a parallel, Scala-2.13-only set of modules
for Spark 4 that coexist with the existing Spark <= 3 artifacts under distinct
`*-spark4` names; the Spark <= 3 build is left untouched.

core-spark4 (published as ammonite-spark-spark4):
- The builder extends the classic `SparkSession.Builder` and reads the `options` map
  off the `SparkSessionBuilder` superclass (walking the class hierarchy).
- REPL classes are delivered via `spark.repl.class.outputDir` (Spark 4's executor
  ExecutorClassLoader no longer supports the HTTP class server), so no `spark-stubs` is
  used or needed. `SparkDependencies.stubsDependency` now returns `Option` (`None` for
  Spark >= 4) and the executor-class-loader probe recognizes the relocated class.

almond-spark-spark4 / almond-toree-spark-spark4:
- The notebook builder is ported the same way (classic builder; log4j2 only).
- Renderers, progress listener and log/util helpers are shared and unchanged.

Build & tests:
- Version-specific builder sources live in modules/{core,almond-spark}/src-spark3 vs
  src-spark4; everything else in src/ is shared and compiles against both.
- Built with Scala 2.13.16 / upstream Ammonite 3.0.8 / almond 0.14.5, and compiled
  against spark-sql 4.0.0 (the oldest 4.x, so the bytecode runs on all 4.0.x).
- test-definitions-spark4 + local-tests-spark4 run the shared suite against Spark 4.0.3
  on Java 17 and 21 (proving the 4.0.0-compiled artifacts run on a newer 4.0.x).
- yarn-tests-spark4 is added but, like Yarn32Tests, its test is a disabled stub pending
  a hadoop-3 dockerized YARN cluster.
- testRepo (Spark <= 3) and testRepoSpark4 are separate, so a Spark <= 3 build never
  pulls in the Spa